tests/models/struct/unnamed/f32/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    f32
);
fn main() {}
